Fix Styling of Tactical Overview
* "Unhandled problems" no longer overlaps when having stale hosts
  --> Renamed to "Unhandled p."
*  Custom overviews now also show "Unhandled"/"Unhandled p."

--- a/web/htdocs/themes/facelift/scss/_snapins.scss
+++ b/web/htdocs/themes/facelift/scss/_snapins.scss
@@ -271,8 +271,8 @@ div#snapin_tactical_overview {
   width: 100%;
 }
 
-#snapin_container_tactical_overview.more th span.more,
-#snapin_container_tactical_overview.less th span.less {
+div.snapin.more table.tacticaloverview th span.more,
+div.snapin.less table.tacticaloverview th span.less {
   display: inline;
 }
 
